【项目：添加界面模块、其它模块调整】【模块：msgviewer 、msglauncher; dbdecryptor】 【原因：添加界面模块、其它模块调整】 【改动：添加界面模块、加载页及其相关资源】 【影响面：加载页】

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -5,5 +5,6 @@ include(cmake/junuo.cmake)
 
 project(WeChatMsgDump)
 
-add_subdirectory(msglauncher)
 add_subdirectory(dbdecryptor)
+add_subdirectory(msgviewer)
+add_subdirectory(msglauncher)
