【项目：启动读取微信内存，跳转逻辑】【模块：dbdevryptor; msgviewer】 【原因：添加线程读取微信内存，并添加跳转逻辑；完善依赖关系】 【改动：添加线程读取微信内存，并添加跳转逻辑；完善依赖关系】 【影响面：微信内存读取与页面跳转】

--- a/source/msgviewer/CMakeLists.txt
+++ b/source/msgviewer/CMakeLists.txt
@@ -26,6 +26,7 @@ junuo_add_library(${target_name} SHARED ${sources} ${qrc_files})
 junuo_use_Qt(${target_name} Core Widgets Gui)
 junuo_auto_moc(${target_name} ${sources})
 junuo_auto_rcc(${target_name} ${qrc_files})
-junuo_include_directories(${target_name} .)
+junuo_link_libraries(${target_name} dbdecryptor)
+junuo_include_directories(${target_name} . ../include)
 junuo_compile_definitions(${target_name} _MSGVIEWER_MODULE_)
 junuo_add_translation(${target_name} ${ts_files})
