--- a/source/dbdecryptor/CMakeLists.txt
+++ b/source/dbdecryptor/CMakeLists.txt
@@ -7,6 +7,8 @@
     threads/wxmemorythread.cpp
 
     configs/versionconfig.json
+
+    python/pymemutils.py
 )
 
 set(target_name dbdecryptor)
@@ -16,10 +18,17 @@ junuo_include_directories(${target_name} .)
 junuo_compile_definitions(${target_name} _DB_DECRYPTOR_MODULE_)
 junuo_use_Qt(${target_name} Core)
 junuo_auto_moc(${target_name} ${sources})
+junuo_use_Python3(${target_name})
 
 add_custom_command(
     TARGET ${target_name} POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/cfgs
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/configs/versionconfig.json ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/cfgs
     COMMENT "Copying config files..."
+)
+
+add_custom_command(
+    TARGET ${target_name} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/python/pymemutils.py ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/bin
+    COMMENT "Copying python files..."
 )
