【项目：微信内存检测】【模块：dbdecryptor】 【原因：添加对3.9.10.27版本的支持。检测wxid更合理】 【改动：添加对3.9.10.27版本的支持。检测出的wxid判断合法】 【影响面：微信内存检测】

--- a/source/dbdecryptor/configs/versionconfig.json
+++ b/source/dbdecryptor/configs/versionconfig.json
@@ -376,5 +376,12 @@
         "phonenumber": 95129576,
         "email": 0,
         "secretkey": 95131040
+    },
+    "3.9.10.27": {
+      "username": 95125656,
+      "wxnumber": 95126992,
+      "phonenumber": 95125464,
+      "email": 0,
+      "secretkey": 95126928
     }
 }
