【项目：解密】【模块：msgviewer】 【原因：添加开始解密按钮】 【改动：添加开始解密按钮，ts翻译等】 【影响面：开始解密按钮】

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -8,3 +8,4 @@ project(WeChatMsgDump)
 add_subdirectory(dbdecryptor)
 add_subdirectory(msgviewer)
 add_subdirectory(msglauncher)
+add_subdirectory(junuoui)
