--- a/source/msgviewer/CMakeLists.txt
+++ b/source/msgviewer/CMakeLists.txt
@@ -30,6 +30,7 @@ junuo_use_Qt(${target_name} Core Widgets Gui)
 junuo_auto_moc(${target_name} ${sources})
 junuo_auto_rcc(${target_name} ${qrc_files})
 junuo_link_libraries(${target_name} dbdecryptor)
+junuo_link_libraries(${target_name} junuoui)
 junuo_include_directories(${target_name} . ../include)
 junuo_compile_definitions(${target_name} _MSGVIEWER_MODULE_)
 junuo_add_translation(${target_name} ${ts_files})
