【项目：数据库解密】【模块：dbdcryptor; msgviewer】 【原因：添加解密线程】 【改动：添加解密线程，但是还没写具体解密逻辑及信号交互】 【影响面：数据库解密】

--- a/source/dbdecryptor/CMakeLists.txt
+++ b/source/dbdecryptor/CMakeLists.txt
@@ -5,6 +5,8 @@
     winprocessutils/winprocessutils.cpp
     threads/wxmemorythread.h
     threads/wxmemorythread.cpp
+    threads/wxdbdecryptthread.h
+    threads/wxdbdecryptthread.cpp
 
     configs/versionconfig.json
 
