--- a/source/dbdecryptor/CMakeLists.txt
+++ b/source/dbdecryptor/CMakeLists.txt
@@ -7,6 +7,7 @@
     threads/wxmemorythread.cpp
     threads/wxdbdecryptthread.h
     threads/wxdbdecryptthread.cpp
+    defines.h
 
     configs/versionconfig.json
 
@@ -21,6 +22,7 @@ junuo_compile_definitions(${target_name} _DB_DECRYPTOR_MODULE_)
 junuo_use_Qt(${target_name} Core)
 junuo_auto_moc(${target_name} ${sources})
 junuo_use_Python3(${target_name})
+junuo_use_OpenSSL(${target_name})
 
 add_custom_command(
     TARGET ${target_name} POST_BUILD
