添加数据库合并功能、增加3.9.11.17版本微信的支持、调整线程对象释放的逻辑，避免概率崩溃

--- a/source/dbdecryptor/configs/versionconfig.json
+++ b/source/dbdecryptor/configs/versionconfig.json
@@ -383,5 +383,12 @@
       "phonenumber": 95125464,
       "email": 0,
       "secretkey": 95126928
+    },
+    "3.9.11.17": {
+        "username": 93550360,
+        "wxnumber": 93551696,
+        "phonenumber": 93550168,
+        "email": 0,
+        "secretkey": 93551632
     }
 }
