--- a/source/dbdecryptor/CMakeLists.txt
+++ b/source/dbdecryptor/CMakeLists.txt
@@ -3,6 +3,8 @@
     wxmemoryreader/wxmemoryreader.cpp
     wxdbdecryptor/wxdbdecryptor.h
     wxdbdecryptor/wxdbdecryptor.cpp
+    wxdbcombiner/wxdbcombiner.h
+    wxdbcombiner/wxdbcombiner.cpp
     utils/winprocessutils.h
     utils/winprocessutils.cpp
     threads/wxmemorythread.h
@@ -21,7 +23,7 @@ set(target_name dbdecryptor)
 junuo_add_library(${target_name} SHARED ${sources})
 junuo_include_directories(${target_name} .)
 junuo_compile_definitions(${target_name} _DB_DECRYPTOR_MODULE_)
-junuo_use_Qt(${target_name} Core)
+junuo_use_Qt(${target_name} Core Sql)
 junuo_auto_moc(${target_name} ${sources})
 junuo_use_Python3(${target_name})
 junuo_use_OpenSSL(${target_name})
