添加对3.9.11.19版本的支持，同时调整崩溃逻辑

--- a/source/dbdecryptor/configs/versionconfig.json
+++ b/source/dbdecryptor/configs/versionconfig.json
@@ -390,5 +390,12 @@
         "phonenumber": 93550168,
         "email": 0,
         "secretkey": 93551632
+    },
+    "3.9.11.19": {
+        "username": 93550296,
+        "wxnumber": 93551632,
+        "phonenumber": 93550104,
+        "email": 0,
+        "secretkey": 93551568
     }
 }
