添加3.9.11.23版本支持。读取用户名时，修改是否为指针的容错逻辑，判断是否本进程内存不准

--- a/source/dbdecryptor/configs/versionconfig.json
+++ b/source/dbdecryptor/configs/versionconfig.json
@@ -397,5 +397,12 @@
         "phonenumber": 93550104,
         "email": 0,
         "secretkey": 93551568
+    },
+    "3.9.11.23": {
+        "username": 93701208,
+        "wxnumber": 93700984,
+        "phonenumber": 93701016,
+        "email": 0,
+        "secretkey": 93702480
     }
 }
