--- a/source/dbdecryptor/configs/versionconfig.json
+++ b/source/dbdecryptor/configs/versionconfig.json
@@ -404,5 +404,12 @@
         "phonenumber": 93701016,
         "email": 0,
         "secretkey": 93702480
+    },
+    "3.9.11.25": {
+        "username": 93701080,
+        "wxnumber": 93702416,
+        "phonenumber": 93700888,
+        "email": 0,
+        "secretkey": 93702352
     }
 }
