处理qrc依赖，以便在需要时重编，同时为主窗口添加边框

--- a/source/msgviewer/CMakeLists.txt
+++ b/source/msgviewer/CMakeLists.txt
@@ -36,7 +36,7 @@ set(target_name msgviewer)
 junuo_add_library(${target_name} SHARED ${sources} ${ts_files} ${qrc_files} ${resource_files})
 junuo_use_Qt(${target_name} Core Widgets Gui)
 junuo_auto_moc(${target_name} ${sources})
-junuo_auto_rcc(${target_name} ${qrc_files})
+junuo_auto_rcc(${target_name} ${qrc_files} ${resource_files})
 junuo_link_libraries(${target_name} dbdecryptor)
 junuo_link_libraries(${target_name} junuoui)
 junuo_include_directories(${target_name} . ../include)
