添加dbreader模块，实现数据库查询worker，以及其对象池。并实现一个简易线程池，只是为了支持多线程同步查询而已，并不是真正意义的线程池。worker使用事件驱动。msgviewer添加对dbreader的依赖

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(dbdecryptor)
 add_subdirectory(msgviewer)
 add_subdirectory(msglauncher)
 add_subdirectory(junuoui)
+add_subdirectory(dbreader)
