添加wechatdbreader类，数据库查询结果不再使用信号发送，因为区分不开谁是谁，改为通过回调函数异步调用返回结果

--- a/source/dbreader/CMakeLists.txt
+++ b/source/dbreader/CMakeLists.txt
@@ -5,6 +5,8 @@ set(sources
     dbthreadpool/databaseworker.cpp
     dbthreadpool/dbthreadpool.h
     dbthreadpool/dbthreadpool.cpp
+    wechatdbreader.h
+    wechatdbreader.cpp
 )
 
 junuo_add_library(${target_name} SHARED ${sources})
