消息窗口，添加空白头像、消息、联系人两个单选按钮及其图标完善

--- a/source/msgviewer/CMakeLists.txt
+++ b/source/msgviewer/CMakeLists.txt
@@ -36,6 +36,7 @@ set(resource_files
     resources/icon_svg/wechat-msg-gray.svg
     resources/icon_svg/wechat-msg-green.svg
     resources/stylesheet/wechatmsgdialog.qss
+    resources/icon_svg/head-image-none.svg
 )
 
 set(ts_files 
