1. dbreader模块，多接收一个context上下文的参数，便于携带回调或其它内容 2. msgviewer模块，msgmanager类升级为单例；添加头像数据从数据库读取，到网络请求拿实际图片两个异步过程；工具函数添加将pixmap变为圆角图标的方法

--- a/source/msgviewer/CMakeLists.txt
+++ b/source/msgviewer/CMakeLists.txt
@@ -18,6 +18,9 @@
     windows/msgdlg/leftwidgets/verticalnavigationbar.h
     windows/msgdlg/leftwidgets/verticalnavigationbar.cpp
 
+    utils/utils.h
+    utils/utils.cpp
+
     msgmanager/msgmanager.h
     msgmanager/msgmanager.cpp
 )
@@ -46,7 +49,7 @@ set(ts_files
 set(target_name msgviewer)
 
 junuo_add_library(${target_name} SHARED ${sources} ${ts_files} ${qrc_files} ${resource_files})
-junuo_use_Qt(${target_name} Core Widgets Gui)
+junuo_use_Qt(${target_name} Core Widgets Gui Network)
 junuo_auto_moc(${target_name} ${sources})
 junuo_auto_rcc(${target_name} ${qrc_files} ${resource_files})
 junuo_link_libraries(${target_name} dbdecryptor)
