定义页面枚举，将左侧导航栏按钮的点击事件绑定到主框的页面切换上，使用QButtonGroup管理单选按钮

--- a/source/msgviewer/CMakeLists.txt
+++ b/source/msgviewer/CMakeLists.txt
@@ -13,6 +13,7 @@
     windows/decryptdlg/widgets/decryptingpage.h
     windows/decryptdlg/widgets/decryptingpage.cpp
 
+    windows/msgdlg/global.h
     windows/msgdlg/msgdlg.h
     windows/msgdlg/msgdlg.cpp
     windows/msgdlg/leftwidgets/verticalnavigationbar.h
