添加会话卡片控件，中间页控件。初步实现基础功能，还没展示及结合数据库调试

--- a/source/msgviewer/CMakeLists.txt
+++ b/source/msgviewer/CMakeLists.txt
@@ -18,6 +18,10 @@
     windows/msgdlg/msgdlg.cpp
     windows/msgdlg/leftwidgets/verticalnavigationbar.h
     windows/msgdlg/leftwidgets/verticalnavigationbar.cpp
+    windows/msgdlg/middlewidgets/middlepage.h
+    windows/msgdlg/middlewidgets/middlepage.cpp
+    windows/msgdlg/middlewidgets/sessionoverviewcard.h
+    windows/msgdlg/middlewidgets/sessionoverviewcard.cpp
 
     utils/utils.h
     utils/utils.cpp
