添加3.9.12.15版本偏移信息

--- a/source/dbdecryptor/configs/versionconfig.json
+++ b/source/dbdecryptor/configs/versionconfig.json
@@ -411,5 +411,12 @@
         "phonenumber": 93700888,
         "email": 0,
         "secretkey": 93702352
+    },
+    "3.9.12.15": {
+        "username": 93813544,
+        "wxnumber": 93814880,
+        "phonenumber": 93813352,
+        "email": 0,
+        "secretkey": 93814816
     }
 }
