添加junuobase子仓库，并新建公共头文件处理命名空间冗长问题

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "source/junuoui"]
 	path = source/junuoui
 	url = git@github.com:junuo-S/junuoui.git
+[submodule "source/junuobase"]
+	path = source/junuobase
+	url = git@github.com:junuo-S/junuobase.git
