--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(msgviewer)
 add_subdirectory(msglauncher)
 add_subdirectory(junuoui)
 add_subdirectory(dbreader)
+add_subdirectory(junuobase)
