新增msgcore模块，准备封装底层能力，构建数据总线

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(msglauncher)
 add_subdirectory(junuoui)
 add_subdirectory(dbreader)
 add_subdirectory(junuobase)
+add_subdirectory(msgcore)
