msgcore包装读取进程内存，并将数据挂载到数据总线上的操作

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -6,8 +6,8 @@ include(cmake/junuo.cmake)
 project(WeChatMsgDump)
 
 add_subdirectory(dbdecryptor)
-add_subdirectory(msgviewer)
-add_subdirectory(msglauncher)
+add_subdirectory(msgmain)
+add_subdirectory(wechatmsgdump)
 add_subdirectory(junuoui)
 add_subdirectory(dbreader)
 add_subdirectory(junuobase)
