--- a/source/msgmain/CMakeLists.txt
+++ b/source/msgmain/CMakeLists.txt
@@ -61,5 +61,5 @@ junuo_link_libraries(${target_name} dbdecryptor)
 junuo_link_libraries(${target_name} junuoui)
 junuo_link_libraries(${target_name} dbreader)
 junuo_include_directories(${target_name} . ../include)
-junuo_compile_definitions(${target_name} _MSGVIEWER_MODULE_)
+junuo_compile_definitions(${target_name} _MSGMAIN_MODULE_)
 junuo_add_translation(${target_name} ${ts_files})
