--- a/source/msgmain/CMakeLists.txt
+++ b/source/msgmain/CMakeLists.txt
@@ -13,15 +13,15 @@
     windows/decryptdlg/widgets/decryptingpage.h
     windows/decryptdlg/widgets/decryptingpage.cpp
 
-    windows/msgdlg/global.h
-    windows/msgdlg/msgdlg.h
-    windows/msgdlg/msgdlg.cpp
-    windows/msgdlg/leftwidgets/verticalnavigationbar.h
-    windows/msgdlg/leftwidgets/verticalnavigationbar.cpp
-    windows/msgdlg/middlewidgets/middlepage.h
-    windows/msgdlg/middlewidgets/middlepage.cpp
-    windows/msgdlg/middlewidgets/sessionoverviewcard.h
-    windows/msgdlg/middlewidgets/sessionoverviewcard.cpp
+    # windows/msgdlg/global.h
+    # windows/msgdlg/msgdlg.h
+    # windows/msgdlg/msgdlg.cpp
+    # windows/msgdlg/leftwidgets/verticalnavigationbar.h
+    # windows/msgdlg/leftwidgets/verticalnavigationbar.cpp
+    # windows/msgdlg/middlewidgets/middlepage.h
+    # windows/msgdlg/middlewidgets/middlepage.cpp
+    # windows/msgdlg/middlewidgets/sessionoverviewcard.h
+    # windows/msgdlg/middlewidgets/sessionoverviewcard.cpp
 
     utils/utils.h
     utils/utils.cpp
@@ -57,9 +57,7 @@ junuo_add_library(${target_name} SHARED ${sources} ${ts_files} ${qrc_files} ${re
 junuo_use_Qt(${target_name} Core Widgets Gui Network)
 junuo_auto_moc(${target_name} ${sources})
 junuo_auto_rcc(${target_name} ${qrc_files} ${resource_files})
-junuo_link_libraries(${target_name} dbdecryptor)
-junuo_link_libraries(${target_name} junuoui)
-junuo_link_libraries(${target_name} dbreader)
+junuo_link_libraries(${target_name} msgcore junuoui)
 junuo_include_directories(${target_name} . ../include)
 junuo_compile_definitions(${target_name} _MSGMAIN_MODULE_)
 junuo_add_translation(${target_name} ${ts_files})
