解决退出时崩溃，并将项目更改为win32应用程序

--- a/source/wechatmsgdump/CMakeLists.txt
+++ b/source/wechatmsgdump/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 set(target_name wechatmsgdump)
 
-junuo_add_executable(${target_name} ${sources})
+junuo_add_executable(${target_name} WIN32 ${sources})
 junuo_link_libraries(${target_name} msgmain)
 junuo_include_directories(${target_name}
     .
