添加3.9.12.17版本偏移信息

--- a/source/dbdecryptor/configs/versionconfig.json
+++ b/source/dbdecryptor/configs/versionconfig.json
@@ -418,5 +418,12 @@
         "phonenumber": 93813352,
         "email": 0,
         "secretkey": 93814816
+    },
+    "3.9.12.17": {
+        "username": 93834984,
+        "wxnumber": 93836320,
+        "phonenumber": 93834792,
+        "email": 0,
+        "secretkey": 93836256
     }
 }
