关于头像，使用观察者模式。数据缓存在数据总线里

--- a/source/msgcore/CMakeLists.txt
+++ b/source/msgcore/CMakeLists.txt
@@ -3,13 +3,14 @@
     src/glue/decryptorwapper.cpp
     src/databus/databus.h
     src/databus/databus.cpp
+    src/interface/interfacedecl.h
 )
 
 set(target_name msgcore)
 
 junuo_add_library(${target_name} SHARED ${sources})
-junuo_use_Qt(${target_name} Core)
+junuo_use_Qt(${target_name} Core Gui)
 junuo_include_directories(${target_name} . ./src ../include)
 junuo_compile_definitions(${target_name} MSGCORE_MODULE)
-junuo_link_libraries(${target_name} dbdecryptor)
+junuo_link_libraries(${target_name} dbdecryptor dbreader)
 junuo_auto_moc(${target_name} ${sources})
