放开消息对话框的编译，并初步完成会话列表的展示，待详细解析msg内容

--- a/source/msgmain/CMakeLists.txt
+++ b/source/msgmain/CMakeLists.txt
@@ -13,15 +13,15 @@
     windows/decryptdlg/widgets/decryptingpage.h
     windows/decryptdlg/widgets/decryptingpage.cpp
 
-    # windows/msgdlg/global.h
-    # windows/msgdlg/msgdlg.h
-    # windows/msgdlg/msgdlg.cpp
-    # windows/msgdlg/leftwidgets/verticalnavigationbar.h
-    # windows/msgdlg/leftwidgets/verticalnavigationbar.cpp
-    # windows/msgdlg/middlewidgets/middlepage.h
-    # windows/msgdlg/middlewidgets/middlepage.cpp
-    # windows/msgdlg/middlewidgets/sessionoverviewcard.h
-    # windows/msgdlg/middlewidgets/sessionoverviewcard.cpp
+    windows/msgdlg/global.h
+    windows/msgdlg/msgdlg.h
+    windows/msgdlg/msgdlg.cpp
+    windows/msgdlg/leftwidgets/verticalnavigationbar.h
+    windows/msgdlg/leftwidgets/verticalnavigationbar.cpp
+    windows/msgdlg/middlewidgets/middlepage.h
+    windows/msgdlg/middlewidgets/middlepage.cpp
+    windows/msgdlg/middlewidgets/sessionoverviewcard.h
+    windows/msgdlg/middlewidgets/sessionoverviewcard.cpp
 
     utils/utils.h
     utils/utils.cpp
@@ -54,7 +54,7 @@ set(ts_files
 set(target_name msgmain)
 
 junuo_add_library(${target_name} SHARED ${sources} ${ts_files} ${qrc_files} ${resource_files})
-junuo_use_Qt(${target_name} Core Widgets Gui Network)
+junuo_use_Qt(${target_name} Core Widgets Gui)
 junuo_auto_moc(${target_name} ${sources})
 junuo_auto_rcc(${target_name} ${qrc_files} ${resource_files})
 junuo_link_libraries(${target_name} msgcore junuoui)
