--- a/source/msgmain/CMakeLists.txt
+++ b/source/msgmain/CMakeLists.txt
@@ -55,6 +55,7 @@ set(target_name msgmain)
 
 junuo_add_library(${target_name} SHARED ${sources} ${ts_files} ${qrc_files} ${resource_files})
 junuo_use_Qt(${target_name} Core Widgets Gui)
+junuo_use_lz4(${target_name})
 junuo_auto_moc(${target_name} ${sources})
 junuo_auto_rcc(${target_name} ${qrc_files} ${resource_files})
 junuo_link_libraries(${target_name} msgcore junuoui)
