添加右侧聊天页面，先暂时新增了标题栏。

--- a/source/msgmain/CMakeLists.txt
+++ b/source/msgmain/CMakeLists.txt
@@ -22,6 +22,8 @@
     windows/msgdlg/middlewidgets/middlepage.cpp
     windows/msgdlg/middlewidgets/sessionoverviewcard.h
     windows/msgdlg/middlewidgets/sessionoverviewcard.cpp
+    windows/msgdlg/rightwidgets/chatpage.h
+    windows/msgdlg/rightwidgets/chatpage.cpp
 
     utils/utils.h
     utils/utils.cpp
