添加微信3.9.12.31版本支持

--- a/source/dbdecryptor/configs/versionconfig.json
+++ b/source/dbdecryptor/configs/versionconfig.json
@@ -425,5 +425,12 @@
         "phonenumber": 93834792,
         "email": 0,
         "secretkey": 93836256
+    },
+    "3.9.12.31": {
+        "username": 94516904,
+        "wxnumber": 94518240,
+        "phonenumber": 94516712,
+        "email": 0,
+        "secretkey": 94518176
     }
 }
