关联cmake仓库，并适配junuo第2代cmake结构

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,9 +1,10 @@
 ﻿cmake_minimum_required(VERSION 3.16)
+project(WeChatMsgDump)
+set(CMAKE_SYSTEM_VERSION 10.0.22621.0)
+set(CMAKE_CXX_STANDARD 20)
 
 include(cmake/config.cmake)
 include(cmake/junuo.cmake)
-
-project(WeChatMsgDump)
 
 add_subdirectory(dbdecryptor)
 add_subdirectory(msgmain)
