--- a/source/msgcore/CMakeLists.txt
+++ b/source/msgcore/CMakeLists.txt
@@ -1,16 +1,13 @@
-﻿set(sources
+﻿junuo_package(msgcore SHARED)
+junuo_sources(
+    junuo_moc
     src/glue/decryptorwapper.h
     src/glue/decryptorwapper.cpp
     src/databus/databus.h
     src/databus/databus.cpp
     src/interface/interfacedecl.h
 )
-
-set(target_name msgcore)
-
-junuo_add_library(${target_name} SHARED ${sources})
-junuo_use_Qt(${target_name} Core Gui Network)
-junuo_include_directories(${target_name} . ./src ../include)
-junuo_compile_definitions(${target_name} MSGCORE_MODULE)
-junuo_link_libraries(${target_name} dbdecryptor dbreader)
-junuo_auto_moc(${target_name} ${sources})
+junuo_use_packages(Qt6Core Qt6Gui Qt6Network)
+junuo_include_directories(. ./src ../include)
+junuo_compile_definitions(MSGCORE_MODULE)
+junuo_link_packages(dbdecryptor dbreader)
