--- a/source/wechatmsgdump/CMakeLists.txt
+++ b/source/wechatmsgdump/CMakeLists.txt
@@ -1,13 +1,4 @@
-﻿set(sources
-    startup.cpp
-)
-
-set(target_name wechatmsgdump)
-
-junuo_add_executable(${target_name} WIN32 ${sources})
-junuo_link_libraries(${target_name} msgmain)
-junuo_include_directories(${target_name}
-    .
-    ../include
-)
-
+﻿junuo_package(wechatmsgdump EXECUTABLE)
+junuo_sources(startup.cpp)
+junuo_link_packages(msgmain)
+junuo_include_directories(. ../include)
