--- a/source/dbdecryptor/CMakeLists.txt
+++ b/source/dbdecryptor/CMakeLists.txt
@@ -1,4 +1,8 @@
-﻿set(sources
+﻿junuo_package(dbdecryptor SHARED)
+junuo_include_directories(. ../include)
+junuo_compile_definitions(_DB_DECRYPTOR_MODULE_)
+junuo_sources(
+    junuo_moc
     wxmemoryreader/wxmemoryreader.h
     wxmemoryreader/wxmemoryreader.cpp
     wxdbdecryptor/wxdbdecryptor.h
@@ -10,27 +14,20 @@
 
     python/pymemutils.py
 )
-
-set(target_name dbdecryptor)
-
-junuo_add_library(${target_name} SHARED ${sources})
-junuo_include_directories(${target_name} . ../include)
-junuo_compile_definitions(${target_name} _DB_DECRYPTOR_MODULE_)
-junuo_use_Qt(${target_name} Core Sql)
-junuo_auto_moc(${target_name} ${sources})
-junuo_use_Python3(${target_name})
-junuo_use_OpenSSL(${target_name})
-junuo_link_libraries(${target_name} junuobase)
+junuo_link_packages(junuobase)
+junuo_use_packages(Qt6Core Qt6Sql python3 openssl)
 
 add_custom_command(
-    TARGET ${target_name} POST_BUILD
+    TARGET ${junuo_current_package_name} POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/cfgs
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/configs/versionconfig.json ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/cfgs
     COMMENT "Copying config files..."
+    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/configs/versionconfig.json
 )
 
 add_custom_command(
-    TARGET ${target_name} POST_BUILD
+    TARGET ${junuo_current_package_name} POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/python/pymemutils.py ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/bin
     COMMENT "Copying python files..."
+    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/python/pymemutils.py
 )
