msgcore读取内存、解密数据库、合并数据库改造

--- a/source/msgcore/CMakeLists.txt
+++ b/source/msgcore/CMakeLists.txt
@@ -1,20 +1,26 @@
 ﻿junuo_package(msgcore SHARED)
 junuo_sources(
-    junuo_moc
-    src/glue/decryptorwapper.h
-    src/glue/decryptorwapper.cpp
-    src/databus/databus.h
-    src/databus/databus.cpp
-    src/interface/interfacedecl.h
-
     ../include/global_interface.h
     ../include/global_part_impl.cpp
     main.cpp
     msgcore.def
+    resource/resource.qrc
     src/dbdecrypt/jwechatdbdecryptmanager.h
     src/dbdecrypt/jwechatdbdecryptmanager.cpp
+    src/dbdecrypt/processreader/jabstractwechatprocessreader.h
+    src/dbdecrypt/processreader/jwechatprocessreaderfactory.h
+    src/dbdecrypt/processreader/jwechatprocessreaderfactory.cpp
+    src/dbdecrypt/processreader/jwechatprocessreaderv3.h
+    src/dbdecrypt/processreader/jwechatprocessreaderv3.cpp
+    src/dbdecrypt/decryptor/jabstractwechatdbdecryptor.h
+    src/dbdecrypt/decryptor/jabstractwechatdbdecryptor.cpp
+    src/dbdecrypt/decryptor/jwechatdbdecryptorv3.h
+    src/dbdecrypt/decryptor/jwechatdbdecryptorv3.cpp
+    src/dbdecrypt/decryptor/jwechatdbdecryptorfactory.h
+    src/dbdecrypt/decryptor/jwechatdbdecryptorfactory.cpp
+    src/dbdecrypt/combiner/jwechatdbcombiner.h
+    src/dbdecrypt/combiner/jwechatdbcombiner.cpp
 )
-junuo_use_packages(Qt6Core Qt6Gui Qt6Network)
+junuo_use_packages(Qt6Core Qt6Gui Qt6Network Qt6Sql python3 openssl)
 junuo_include_directories(. ./src ../include)
-junuo_compile_definitions(MSGCORE_MODULE)
-junuo_link_packages(dbdecryptor dbreader)
+junuo_link_packages(junuobase)
