走通微信进程探测流程，使用com接口，core层使用事件驱动上层

--- a/source/msgmain/CMakeLists.txt
+++ b/source/msgmain/CMakeLists.txt
@@ -1,11 +1,16 @@
 ﻿junuo_package(msgmain SHARED)
 junuo_sources(
     junuo_moc
-    entry.h
-    entry.cpp
+
+    ../include/global_interface.h
+    ../include/global_part_impl.cpp
+
+    main.cpp
     stdafx.h
     stdafx.cpp
     global.h
+    msgapplication.h
+    msgapplication.cpp
 
     windows/decryptdlg/decryptdlg.h
     windows/decryptdlg/decryptdlg.cpp
@@ -16,22 +21,22 @@ junuo_sources(
     windows/decryptdlg/widgets/decryptingpage.h
     windows/decryptdlg/widgets/decryptingpage.cpp
 
-    windows/msgdlg/msgdlg.h
-    windows/msgdlg/msgdlg.cpp
-    windows/msgdlg/leftwidgets/verticalnavigationbar.h
-    windows/msgdlg/leftwidgets/verticalnavigationbar.cpp
-    windows/msgdlg/middlewidgets/middlepage.h
-    windows/msgdlg/middlewidgets/middlepage.cpp
-    windows/msgdlg/middlewidgets/sessionoverviewcard.h
-    windows/msgdlg/middlewidgets/sessionoverviewcard.cpp
-    windows/msgdlg/rightwidgets/chatpage.h
-    windows/msgdlg/rightwidgets/chatpage.cpp
-    windows/msgdlg/rightwidgets/messagecard.h
-    windows/msgdlg/rightwidgets/messagecard.cpp
-    windows/msgdlg/rightwidgets/messagecarddef.h
-    windows/msgdlg/rightwidgets/messagecarddef.cpp
-    windows/msgdlg/rightwidgets/messagecardfactory.h
-    windows/msgdlg/rightwidgets/messagecardfactory.cpp
+    # windows/msgdlg/msgdlg.h
+    # windows/msgdlg/msgdlg.cpp
+    # windows/msgdlg/leftwidgets/verticalnavigationbar.h
+    # windows/msgdlg/leftwidgets/verticalnavigationbar.cpp
+    # windows/msgdlg/middlewidgets/middlepage.h
+    # windows/msgdlg/middlewidgets/middlepage.cpp
+    # windows/msgdlg/middlewidgets/sessionoverviewcard.h
+    # windows/msgdlg/middlewidgets/sessionoverviewcard.cpp
+    # windows/msgdlg/rightwidgets/chatpage.h
+    # windows/msgdlg/rightwidgets/chatpage.cpp
+    # windows/msgdlg/rightwidgets/messagecard.h
+    # windows/msgdlg/rightwidgets/messagecard.cpp
+    # windows/msgdlg/rightwidgets/messagecarddef.h
+    # windows/msgdlg/rightwidgets/messagecarddef.cpp
+    # windows/msgdlg/rightwidgets/messagecardfactory.h
+    # windows/msgdlg/rightwidgets/messagecardfactory.cpp
 
     utils/utils.h
     utils/utils.cpp
@@ -46,6 +51,6 @@ junuo_sources(
     protobuf/MSG.proto
 )
 junuo_use_packages(Qt6Core Qt6Widgets Qt6Gui Qt6Xml protobuf lz4)
-junuo_link_packages(msgcore junuoui)
+junuo_link_packages(junuoui)
 junuo_include_directories(. ../include ${CMAKE_CURRENT_BINARY_DIR})
 junuo_compile_definitions(_MSGMAIN_MODULE_)
